Style Site an  add GH Actions

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -1,11 +1,10 @@
 ---
-
 ---
 
 $brown: #B59F62;
 $teal: #40FFDC;
 $black: #111;
-$primary: $teal;
+$primary: #f26430;
 $dark:    $black;
 $enable-rounded: false;
 
